osm2gpsmid: show also jarsigner errors